# paralela

./: CMakeLists.txt
build-mingw/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/: main.c  main.cpp
